--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="https://preview.redd.it/8pj4xiq985x11.jpg?width=910&auto=webp&s=7dc9d89a18340b294242310fdca9b9fce81efcd4">
     <h1>Witaj w Spike</h1>
     <p>
       Mam najlepsze konta w BrawlStars!
