added web browser
on a site

--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
     <p>pingwin</p>
     <br>
     <p><a href=mailto:pasmichal43@gmail.com>Uzyskaj moje konta z BrawlStars!</a></p>
+    <div1>...</div1>
+<script async src="https://cse.google.com/cse.js?cx=016391854276259939594:ups2zt07ywe"></script>
+<div class="gcse-search"></div> 
+<div2>...</div2>
   </body>
 </html>
