--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spike</title>
+    <title>Spike-Szukaj w internecie i uzyskuj konta BrawlStars!</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div1>...</div1>
+    <script async src="https://cse.google.com/cse.js?cx=016391854276259939594:ups2zt07ywe"></script>
+    <div class="gcse-search"></div> 
+    <div2>...</div2>
     <img src="https://preview.redd.it/8pj4xiq985x11.jpg?width=910&auto=webp&s=7dc9d89a18340b294242310fdca9b9fce81efcd4">
     <h1>Witaj w Spike</h1>
     <p>
@@ -21,9 +25,5 @@
     <p>pingwin</p>
     <br>
     <p><a href=mailto:pasmichal43@gmail.com>Uzyskaj moje konta z BrawlStars!</a></p>
-    <div1>...</div1>
-<script async src="https://cse.google.com/cse.js?cx=016391854276259939594:ups2zt07ywe"></script>
-<div class="gcse-search"></div> 
-<div2>...</div2>
   </body>
 </html>
